# efferve

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: commit.md  handoff.md  plan.md  pr.md  review.md
.claude/skills/debug/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: secrets-scan.yml
docs/diagrams/: ASCII_DIAGRAMS.md  PLAN.md  README.md  efferve-architecture.excalidraw  efferve-beacon-to-alert.excalidraw  efferve-classification.excalidraw  efferve-setup-workflow.excalidraw  efferve-use-cases.excalidraw  generate_diagrams.py
src/efferve/: __init__.py  config.py  database.py  main.py
src/efferve/alerts/: __init__.py  manager.py  models.py
src/efferve/api/: routes.py
src/efferve/persona/: __init__.py  engine.py  models.py
src/efferve/registry/: __init__.py  models.py  store.py
src/efferve/sniffer/: __init__.py  base.py  glinet.py  mock.py  monitor.py  opnsense.py  ruckus.py  test_connection.py
src/efferve/ui/: __init__.py  routes.py
src/efferve/ui/templates/: alerts.html  base.html  setup.html  (+3 more)
tests/: conftest.py  test_alerts.py  test_api_m2.py  test_api_routes.py  test_auth.py  test_config.py  test_connection.py  test_persona.py  test_presence_log.py  test_registry_models.py  test_registry_store.py  test_setup_wizard.py  test_sniffer_glinet.py  test_sniffer_mock.py  test_sniffer_ruckus.py
(+7 files in other folders)
